--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<div class="container">
 			<header>
 							<div class="brand">
-							<img src="Logo.png" alt="Thermoholder logo" class="logo-img">
+							<img src="logo.png" alt="Thermoholder logo" class="logo-img">
 							<div>
 								<h1>Thermoholder</h1>
 								<div class="muted">Simple digital Wireless thermometer for beginners</div>
