--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
 			.feature h4{margin:0 0 6px}
 			.muted{color:var(--muted);font-size:14px}
 
-			/* Live widget */
 			.widget{display:flex;flex-direction:column;align-items:center;gap:8px;text-align:center}
 			.temp{font-size:44px;font-weight:700}
 			.status{font-size:13px;color:var(--muted)}
@@ -65,6 +64,8 @@
 								<a class="btn ghost" href="#specs">Main specs</a>
 								<a class="btn ghost" href="#cta">Pricing</a>
 								<a class="btn ghost" href="#contact">Contact</a>
+								<!-- PDF instruction link -->
+								<a class="btn ghost" href="thermoholder%20instrukcija.pdf" target="_blank" rel="noopener">Instruction</a>
 							</nav>
 						</div>
 			</header>
@@ -259,7 +260,6 @@
 				<div class="muted">Contact: <a href="mailto:smuplaceholder@gmail.com" style="color:inherit">smuplaceholder@gmail.com</a> • <a href="https://www.instagram.com/smuthermoholder/" target="_blank" rel="noopener" style="color:inherit">Instagram</a></div>
 			</footer>
 		</div>
-
 		<!-- Removed Try/Buy/Demo button handlers as the controls were removed -->
 	</body>
 </html>
