Remove bullet points from badge text

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							</div>
 						</div>
 							<div style="display:flex;align-items:center;gap:10px">
-							<div class="badge">Accurate • Simple • Wireless</div>
+							<div class="badge">Accurate Simple Wireless</div>
 							<nav aria-label="Main navigation" style="display:flex;gap:8px">
 								<a class="btn ghost" href="#features">Features</a>
 								<a class="btn ghost" href="#why">Why us?</a>
