--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 		<div class="container">
 			<header>
 				<div class="brand">
-					<img src="logo.png" alt="Thermoholder logo" class="logo-img">
+					<img src="favicon.png" alt="Thermoholder logo" class="logo-img">
 					<div>
 						<h1>Thermoholder</h1>
 						<p class="subtitle">Simple digital Wireless thermometer for beginners</p>
