--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- Header -->
         <header>
             <div class="logo-section">
-                <img src="logo.png" alt="Thermoholder logo">
+                <img src="favicon.png" alt="Thermoholder logo">
                 <div>
                     <h1>Thermoholder</h1>
                     <p>Simple digital Wireless thermometer for beginners</p>
