--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
                     <!-- Product Image -->
                     <div class="card card-sm product-image">
-                        <img src="corpus.jpg" alt="Thermoholder device">
+                        <img src="corpus.png" alt="Thermoholder device">
                     </div>
                 </div>
 
