--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <a href="#specs">Specs</a>
                     <a href="#pricing">Pricing</a>
                     <a href="#contact">Contact</a>
-                    <a href="thermoholder instrukcija.pdf" target="_blank">
+                    <a href="thermoholder_instruction.pdf" target="_blank">
                         <svg class="icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg>
                         Instruction
                     </a>
