--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thermoholder - Simple Digital Wireless Thermometer</title>
     <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -95,7 +94,7 @@
         <!-- Header -->
         <header>
             <div class="logo-section">
-                <img src="favicon.png" alt="Thermoholder logo">
+                <img src="logo.png" alt="Thermoholder logo">
                 <div>
                     <h1>Thermoholder</h1>
                     <p>Simple digital Wireless thermometer for beginners</p>
